Bug 465842 - Changing tiling layout sets padding to 4, but still shows 0
Summary: Changing tiling layout sets padding to 4, but still shows 0
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: Custom Tiling (other bugs)
Version First Reported In: 5.27.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-16 14:49 UTC by Hannes Vermeire
Modified: 2023-02-21 10:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hannes Vermeire 2023-02-16 14:49:30 UTC
SUMMARY
Adding or removing splits, or loading a layout will set the padding between windows back to default (I think that's 4), but the value in the top right corner still shows "0"

STEPS TO REPRODUCE
1. Set padding to 0
2. Load a layout
3. Shift drag a window onto a tiling zone

OBSERVED RESULT
Padding around the window is not 0


EXPECTED RESULT
Padding around the window to be 0


SOFTWARE/OS VERSIONS
Linux/KDE Plasma:
(available in About System)
KDE Plasma Version: 5.27.0
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2023-02-17 20:36:06 UTC
Can reproduce.
Comment 2 Bug Janitor Service 2023-02-20 08:37:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3632
Comment 3 David Edmundson 2023-02-21 09:35:35 UTC
Git commit 18d6159be193f3267d258b28a7efa9ffd4e98d7c by David Edmundson, on behalf of Vlad Zahorodnii.
Committed on 21/02/2023 at 09:22.
Pushed by vladz into branch 'master'.

tiling: Make child tiles inherit padding from parent tile

If a new tile is added, make it inherit parent tile's padding to ensure
consistent padding.

M  +3    -0    src/tiles/tile.cpp

https://invent.kde.org/plasma/kwin/commit/18d6159be193f3267d258b28a7efa9ffd4e98d7c
Comment 4 Vlad Zahorodnii 2023-02-21 10:56:59 UTC
Git commit 451eec2e8c314ce2d43cd8164f0ee77e8593fe82 by Vlad Zahorodnii.
Committed on 21/02/2023 at 09:54.
Pushed by vladz into branch 'Plasma/5.27'.

tiling: Make child tiles inherit padding from parent tile

If a new tile is added, make it inherit parent tile's padding to ensure
consistent padding.


(cherry picked from commit 18d6159be193f3267d258b28a7efa9ffd4e98d7c)

M  +3    -0    src/tiles/tile.cpp

https://invent.kde.org/plasma/kwin/commit/451eec2e8c314ce2d43cd8164f0ee77e8593fe82