tiling: Make child tiles inherit padding from parent tile

If a new tile is added, make it inherit parent tile's padding to ensure
consistent padding.

BUG: 465842